deploy/kubernetes/xuanwu-mall/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xuanwu-mall
  name: xuanwu-mall
  namespace: xuanwu-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xuanwu-mall
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xuanwu-mall
        app.kubernetes.io/instance: xuanwu
    spec:
      imagePullSecrets:
        - name: "coding-registry"
      serviceAccountName: xuanwu-mall
      containers:
        - image: "image"
          imagePullPolicy: Always
          name: mall
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 1000m
              memory: 1024Mi
          volumeMounts:
          - mountPath: "/xuanwu/config.yaml"
            name: "xuanwu-mall"
            readOnly: false
            subPath: "config.yaml"
      volumes:
        - configMap:
            defaultMode: 0777
            items:
              - key: "config.yaml"
                path: "config.yaml"
            name: "xuanwu-mall-configmap"
          name: "xuanwu-mall"
