deploy/kubernetes/xuanwu-mall/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: xuanwu-mall
  namespace: xuanwu-system
spec:
  ingressClassName: nginx
  rules:
    - host: mall.wecoding.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xuanwu-mall-service
                port:
                  number: 9090
